fix track spacing

--- a/src/components/globals.css
+++ b/src/components/globals.css
@@ -84,7 +84,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding: 0.5vh 0;
 }
 .track .link-remove-section {
@@ -100,16 +100,24 @@
   overflow: hidden;
   text-overflow: ellipsis;
   justify-items: center;
-  width: 56vw;
-  margin-right: 1.5vw;
+  margin-right: 3vw;
+  flex: 1;
 }
 
 .remove-track {
   cursor: pointer;
-  padding-right: 3vw;
 }
 
 .remove-track img {
+  height: 2vh;
+}
+
+.link-track {
+  cursor: pointer;
+  padding-right: 3vw;
+}
+
+.link-track img {
   height: 2vh;
 }
 
@@ -265,55 +273,13 @@
   width: fit-content;
 }
 
-.slider-input {
-  -webkit-appearance: none;
-  appearance: none; 
-  width: 96.3%;
-  cursor: pointer;
-  outline: none;
-  overflow: hidden;
-  border-radius: 16em;
-}
-
-.slider-input::-webkit-slider-runnable-track {
-  height: 2vh;
-  background: #ccc;
-  border-radius: 16em;
-  pointer-events: none
-}
-
-.slider-input::-moz-range-track {
-  height: 2vh;
-  background: #ccc;
-  border-radius: 16em;
-}
-
-.slider-input::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none; 
-  height: 100%;
-  width: 2vh;
-  background-color: #ccc;
-  border-radius: 50%;
-  border: 0.188em solid #0D0D0D;
-}
-
-.slider-input::-moz-range-thumb {
-  -webkit-appearance: none;
-  appearance: none; 
-  height: 100%;
-  width: 6%;
-  background-color: #ccc;
-  border-radius: 50%;
-  border: 0.188em solid #0D0D0D;
-}
-
 .recommended-tracks {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   height: 90vh;
+  width: 100vw;
   color: #FFF;
 }
 
@@ -325,15 +291,11 @@
 }
 
 .track-section {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   width: 90%;
   height: 64vh;
   overflow-y: scroll;
   overflow-x: hidden;
   position: absolute;
-  z-index: 2;
   padding: 0 3vw;
 }
 
